# TransitivityClusteringILP

./: .gitignore  AbstractMatrix.cpp  AbstractMatrix.h  CMakeLists.txt  ClusterEvaluation.h  ClusteringILP.cpp  ClusteringILP.h  ClusteringILP2.cpp  ClusteringILP2.h  DenseColumnSubset.cpp  DenseColumnSubset.h  DenseMatrix.cpp  DenseMatrix.h  DenseMatrixIterator.h  DenseMatrixReader.cpp  DenseMatrixReader.h  DenseMatrixWriter.cpp  DenseMatrixWriter.h  DenseRowSubset.cpp  DenseRowSubset.h  Distance.h  Exception.cpp  Exception.h  IterativeClusteringILP.cpp  IterativeClusteringILP.h  Matrix.h  MatrixIterator.h  MatrixWriter.cpp  MatrixWriter.h  README.md  SimilarityMeasures.h  Statistic.h  macros.h  matrixTools.cpp  matrixTools.h  transitivityClusteringILP.cpp
cmake/: CompilerSpecific.cmake  Config.cmake.in  ConfigVersion.cmake.in  FindGMP.cmake  FindMPFR.cmake  config.h.in
test/: CMakeLists.txt  Distance_test.cpp  Statistic_test.cpp
test/cmake/: TestExecuter.cmake  config.h.in
test/data/: TestAssembly.txt  TestBed.bed
